--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
         </div>
       </section>
 
+      <!-- UUSI: PÄIVÄN ENERGIA-BREAKDOWN -->
+      <section class="modal-section">
+        <h3>Päivän energiadata</h3>
+        <ul id="energy-breakdown"></ul>
+      </section>
+
       <section class="modal-section">
         <h3>Shots (päivä)</h3>
         <p class="shots-line"><span>Päivän laukaukset:</span> <strong id="modal-day-shots">0</strong></p>
