--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </section>
 
-      <!-- UUSI: PÄIVÄN ENERGIA-BREAKDOWN -->
+      <!-- PÄIVÄN ENERGIA-BREAKDOWN -->
       <section class="modal-section">
         <h3>Päivän energiadata</h3>
         <ul id="energy-breakdown"></ul>
@@ -244,6 +244,22 @@
         <h3>Insights</h3>
         <ul id="insights-list"></ul>
       </section>
+    </div>
+  </div>
+
+  <!-- MOVE MODE PICKER -->
+  <div id="move-mode-backdrop">
+    <div id="move-mode-sheet">
+      <h3>Valitse liike</h3>
+      <p class="move-hint">Nopea merkintä, ei selittelyä: miltä tämä liike tuntui?</p>
+      <div class="move-mode-row">
+        <button class="move-mode-btn" data-mode="Walk">🚶 Walk</button>
+        <button class="move-mode-btn" data-mode="Run">🏃 Run</button>
+        <button class="move-mode-btn" data-mode="Gym">🏋 Gym</button>
+        <button class="move-mode-btn" data-mode="Sport">⚽ Sport</button>
+        <button class="move-mode-btn" data-mode="Mobility">🧘 Mobility</button>
+      </div>
+      <button id="move-mode-cancel" class="btn ghost tiny fullwidth">Peruuta</button>
     </div>
   </div>
 
