--- a/index.html
+++ b/index.html
@@ -133,11 +133,14 @@
       </div>
     </section>
 
-    <!-- BOSS + REVIEW (TRAILER FEEL) -->
+    <!-- BOSS + REVIEW + RESET -->
     <section id="boss-card" class="card">
       <div class="section-title-row">
         <h2>WEEKLY BOSS</h2>
-        <button id="open-review" class="btn ghost tiny">Review 90d</button>
+        <div class="boss-actions">
+          <button id="open-review" class="btn ghost tiny">Review 90d</button>
+          <button id="btn-reset" class="btn danger tiny">Reset</button>
+        </div>
       </div>
       <div id="boss-inner">
         <p id="boss-name" class="boss-name">Ei bossia vielä – kerää dataa.</p>
