--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     </div>
   </header>
 
+  <!-- ESPN-LIVE TICKER -->
+  <div id="ticker-bar">
+    <div id="ticker-inner">BLOODLINER 90 • READY</div>
+  </div>
+
   <!-- MAIN LAYOUT -->
   <main id="layout">
 
@@ -44,11 +49,12 @@
       <h2>90 DAY BOARD</h2>
       <p class="sub-hint">
         Klikkaa päivää nähdäksesi statsit. Väri = päivän kokonais Score.
+        ✓ = vähintään yksi habit tehty sinä päivänä.
       </p>
       <div id="day-grid"></div>
     </section>
 
-    <!-- WAKE + ENERGY PANEL -->
+    <!-- LEFT COLUMN: WAKE + ENERGY -->
     <section id="left-column">
       <!-- WAKE CARD -->
       <section id="wake-card" class="card">
@@ -123,7 +129,7 @@
       </section>
     </section>
 
-    <!-- HABITS + FINALIZE COLUMN -->
+    <!-- RIGHT COLUMN: HABITS + SUMMARY -->
     <section id="right-column">
       <!-- HABITS CARD -->
       <section id="habits-card" class="card">
@@ -143,7 +149,7 @@
       <!-- DAY SUMMARY + FINALIZE -->
       <section id="summary-card" class="card">
         <h2>TÄMÄ PÄIVÄ</h2>
-        <p class="sub-hint">Näet nopeasti paljonko tuli kasaan.</p>
+        <p class="sub-hint">Nopea yhteenveto päivästä.</p>
 
         <div id="summary-stats">
           <div class="qstat">
